[gd_scene load_steps=11 format=3 uid="uid://cypvnme735xpc"]

[ext_resource type="Texture2D" uid="uid://vjm4igbsy0h7" path="res://Sprites/Currently Used/Poop upscale.png" id="1_g7m21"]
[ext_resource type="Script" uid="uid://cvr47wdro7po5" path="res://Scripts/giant_poop_purchase.gd" id="1_rqgm5"]
[ext_resource type="FontFile" uid="uid://tcbfhi2f14ax" path="res://m5x7.ttf" id="3_sibkc"]
[ext_resource type="Texture2D" uid="uid://c5du35lcbfdx7" path="res://Sprites/Currently Used/Purchase-Button.png" id="4_6u2bd"]
[ext_resource type="Texture2D" uid="uid://d0t5pyqj43o62" path="res://Sprites/Currently Used/Purchase-Pressed.png" id="5_o5nlr"]
[ext_resource type="Texture2D" uid="uid://ci857tfpxitjg" path="res://Sprites/Currently Used/Purchase-Hover.png" id="6_vusd0"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_sibkc"]
light_mode = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xa2vd"]
bg_color = Color(0.882353, 0.882353, 0.882353, 0.854902)

[sub_resource type="Theme" id="Theme_sbqc8"]
Label/colors/font_color = Color(0, 0, 0, 1)
Label/fonts/font = null
Label/styles/normal = SubResource("StyleBoxFlat_xa2vd")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_l4hj1"]
light_mode = 1

[node name="giant_poop_purchase" type="Node2D"]
scale = Vector2(0.992149, 0.899725)
script = ExtResource("1_rqgm5")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("CanvasItemMaterial_sibkc")
position = Vector2(-5.42101e-20, -106.699)
scale = Vector2(0.563307, 0.58)
texture = ExtResource("1_g7m21")

[node name="giant_poop_description" type="Label" parent="."]
visible = false
material = SubResource("CanvasItemMaterial_sibkc")
offset_left = -137.0
offset_top = -178.0
offset_right = 137.0
offset_bottom = -36.0
theme = SubResource("Theme_sbqc8")
theme_override_fonts/font = ExtResource("3_sibkc")
theme_override_font_sizes/font_size = 24
text = "Adds a chance for a giant poop to be dropped worth a large amount basic poop.
[0.2%]"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Button" type="TextureButton" parent="."]
material = SubResource("CanvasItemMaterial_l4hj1")
offset_left = -129.013
offset_right = -65.0129
offset_bottom = 24.0
scale = Vector2(4, 4)
texture_normal = ExtResource("4_6u2bd")
texture_pressed = ExtResource("5_o5nlr")
texture_hover = ExtResource("6_vusd0")

[node name="Giant_Poop_Label" type="Label" parent="."]
material = SubResource("CanvasItemMaterial_l4hj1")
offset_left = -145.139
offset_right = 144.861
offset_bottom = 80.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_sibkc")
theme_override_font_sizes/font_size = 36
text = "Unlock Giant Poops
500 Poop"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
